[gd_scene load_steps=16 format=2]

[ext_resource path="res://player/player.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://world/light.png" type="Texture" id=3]
[ext_resource path="res://player/cooldown_bar/recharging_flat_box.tres" type="StyleBox" id=4]
[ext_resource path="res://player/cannon.wav" type="AudioStream" id=5]
[ext_resource path="res://player/hurt.wav" type="AudioStream" id=6]
[ext_resource path="res://player/cooldown_bar/background_flat_box.tres" type="StyleBox" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 6 )

[sub_resource type="Animation" id=4]
resource_name = "start"
length = 5.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 5 ),
"transitions": PoolRealArray( 1, 0.2, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../BigLight:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 5 ),
"transitions": PoolRealArray( 1, 0.2, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.5 ]
}

[sub_resource type="Animation" id=5]
length = 4.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("SmallLight:texture_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.06, 0.05, 0.06, 0.05 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BigLight:texture_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.1, 0.13, 0.1, 0.13 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10.0, 10.0 ]
}

[sub_resource type="CircleShape2D" id=6]

[sub_resource type="Animation" id=7]
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "charge"
tracks/0/type = "value"
tracks/0/path = NodePath(".:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -8 )
rotation = -0.174533
texture = ExtResource( 1 )
hframes = 4

[node name="ShootLine" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0, -5 )
texture = ExtResource( 1 )
offset = Vector2( 36, 0 )
region_enabled = true
region_rect = Rect2( 64, 0, 48, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 3 )

[node name="SmallLight" type="Light2D" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 3 )
texture_scale = 0.25
energy = 0.8

[node name="Start" type="AnimationPlayer" parent="SmallLight"]
autoplay = "start"
anims/start = SubResource( 4 )

[node name="BigLight" type="Light2D" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 3 )
texture_scale = 0.4
energy = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 5 )

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "sfx"

[node name="Timer" type="Timer" parent="Shoot"]
wait_time = 0.9
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -9
amount = 20
lifetime_randomness = 0.2
local_coords = false
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 20.0
damping = 50.0
scale_amount = 2.0

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -5 )
shape = SubResource( 6 )

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "sfx"

[node name="Timer" type="Timer" parent="Hurt"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Immune" type="AnimationPlayer" parent="."]
anims/immune = SubResource( 7 )

[node name="CooldownBar" type="ProgressBar" parent="."]
visible = false
margin_left = -32.0
margin_top = 7.0
margin_right = 32.0
margin_bottom = 15.0
custom_styles/fg = ExtResource( 4 )
custom_styles/bg = ExtResource( 7 )
max_value = 100.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CooldownBar"]
anims/charge = SubResource( 8 )
[connection signal="timeout" from="Shoot/Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="Hurt/Timer" to="." method="_on_HurtTimer_timeout"]
